<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, You rock!</string>
    <!-- THE NAME OF THE APPLICATION -->
    <string name="app_name">Android Coap thingy</string>
    
	<string name="button1">Add</string>
	
	<string name="item1">lol, text</string> 
	
	<string name="no_data">ingen data</string> 
	<string name="no_data2">0 data</string>
	<string name="data">lol, jag har data</string> 
	
	<string name="add">add</string>
	<string name="fulknapp">ful +knapp</string>
	
	<!-- Edittext defaults -->
	<string name="hostadress">mulle.csproject.org</string>
	<string name="hostname">Server name</string>
	<string name="noUnit">"?"</string>
    <string name="sendingvalue">Value to send</string>
</resources>